graphite-web (0.9.10-1.1) unstable; urgency=low

  * Non-maintainer upload.
  * New upstream release
  * Added ldap as a reccomended, updated requires to include wsgi and sqlite
  * Included install of examples
  * Added config for gbp
  * Patched to stop upstream installer from installing exmaples
  * Patched so upstream installer doesn't create log dirs
  * Patched local settings for debian
  * Patched cli.html to use debian packaged js
  * Patched composer.html to use debian packaged js
  * Patched graphlot.html to use debian packaged js

 -- Tom Beresford <tom.beresford@bskyb.com>  Wed, 25 Jul 2012 14:35:24 +0100

graphite-web (0.9.9-1) unstable; urgency=low

  * Initial release (Closes: #659632)

 -- Jonas Genannt <jonas.genannt@capi2name.de>  Tue, 17 Jan 2012 20:35:27 +0100